@@ -17,39 +17,44 @@
 
 package org.openqa.selenium.firefox;
 
+import static org.openqa.selenium.remote.Browser.FIREFOX;
+
 import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableMap;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.nio.file.FileVisitResult;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.SimpleFileVisitor;
+import java.nio.file.attribute.BasicFileAttributes;
+import java.util.Base64;
+import java.util.Map;
+import java.util.function.Predicate;
+import java.util.zip.ZipEntry;
+import java.util.zip.ZipOutputStream;
 import org.openqa.selenium.Capabilities;
-import org.openqa.selenium.WebDriver;
-import org.openqa.selenium.WebDriverException;
-import org.openqa.selenium.WrapsDriver;
+import org.openqa.selenium.InvalidArgumentException;
 import org.openqa.selenium.internal.Require;
-import org.openqa.selenium.io.Zip;
 import org.openqa.selenium.remote.AdditionalHttpCommands;
 import org.openqa.selenium.remote.AugmenterProvider;
 import org.openqa.selenium.remote.CommandInfo;
 import org.openqa.selenium.remote.ExecuteMethod;
-import org.openqa.selenium.remote.RemoteWebDriver;
 import org.openqa.selenium.remote.http.HttpMethod;
 
-import java.io.File;
-import java.io.IOException;
-import java.nio.file.Path;
-import java.util.Map;
-import java.util.function.Predicate;
-
-import static org.openqa.selenium.remote.Browser.FIREFOX;
-import static org.openqa.selenium.remote.DriverCommand.UPLOAD_FILE;
-
+@SuppressWarnings({"rawtypes", "RedundantSuppression"})
 @AutoService({AdditionalHttpCommands.class, AugmenterProvider.class})
 public class AddHasExtensions implements AugmenterProvider<HasExtensions>, AdditionalHttpCommands {
 
   public static final String INSTALL_EXTENSION = "installExtension";
   public static final String UNINSTALL_EXTENSION = "uninstallExtension";
 
-  private static final Map<String, CommandInfo> COMMANDS = ImmutableMap.of(
-    INSTALL_EXTENSION, new CommandInfo("/session/:sessionId/moz/addon/install", HttpMethod.POST),
-    UNINSTALL_EXTENSION, new CommandInfo("/session/:sessionId/moz/addon/uninstall", HttpMethod.POST));
+  private static final Map<String, CommandInfo> COMMANDS =
+      Map.of(
+          INSTALL_EXTENSION,
+              new CommandInfo("/session/:sessionId/moz/addon/install", HttpMethod.POST),
+          UNINSTALL_EXTENSION,
+              new CommandInfo("/session/:sessionId/moz/addon/uninstall", HttpMethod.POST));
 
   @Override
   public Map<String, CommandInfo> getAdditionalCommands() {
@@ -71,38 +76,54 @@ public class AddHasExtensions implements AugmenterProvider<HasExtensions>, Addit
     return new HasExtensions() {
       @Override
       public String installExtension(Path path) {
-        Require.nonNull("Extension Path", path);
+        return installExtension(path, false);
+      }
 
-        if (executeMethod instanceof WrapsDriver) {
-          WebDriver wrapped = ((WrapsDriver) executeMethod).getWrappedDriver();
-          if (wrapped instanceof RemoteWebDriver) {
-            File localFile = ((RemoteWebDriver) wrapped).getFileDetector().getLocalFile(path.toString());
-            if (localFile != null) {
-              try {
-                String zip = Zip.zip(localFile);
-                String newPath = (String) executeMethod.execute(UPLOAD_FILE, ImmutableMap.of("file", zip));
-                return installExtensionAtPath(newPath);
-              } catch (IOException e) {
-                throw new WebDriverException("Cannot upload " + localFile, e);
-              }
-            }
+      @Override
+      public String installExtension(Path path, Boolean temporary) {
+        Require.nonNull("Extension Path", path);
+        Require.nonNull("Temporary", temporary);
+
+        String encoded;
+        try {
+          if (Files.isDirectory(path)) {
+            encoded = Base64.getEncoder().encodeToString(Files.readAllBytes(zipDirectory(path)));
+          } else {
+            encoded = Base64.getEncoder().encodeToString(Files.readAllBytes(path));
           }
+        } catch (IOException e) {
+          throw new InvalidArgumentException(path + " is an invalid path", e);
         }
 
-        return installExtensionAtPath(path.toString());
+        return (String)
+            executeMethod.execute(
+                INSTALL_EXTENSION, Map.of("addon", encoded, "temporary", temporary));
+      }
+
+      private Path zipDirectory(Path path) throws IOException {
+        Path extZip = Paths.get(path.getFileName().toString() + ".zip");
+        try (ZipOutputStream zos = new ZipOutputStream(new FileOutputStream(extZip.toFile()))) {
+          Files.walkFileTree(
+              path,
+              new SimpleFileVisitor<Path>() {
+                @Override
+                public FileVisitResult visitFile(Path file, BasicFileAttributes attrs)
+                    throws IOException {
+                  zos.putNextEntry(new ZipEntry(path.relativize(file).toString()));
+                  Files.copy(file, zos);
+                  zos.closeEntry();
+                  return FileVisitResult.CONTINUE;
+                }
+              });
+        }
+        return extZip;
       }
 
       @Override
       public void uninstallExtension(String extensionId) {
         Require.nonNull("Extension ID", extensionId);
 
-        executeMethod.execute(UNINSTALL_EXTENSION, ImmutableMap.of("id", extensionId));
-      }
-
-      private String installExtensionAtPath(String path) {
-        return (String) executeMethod.execute(
-          INSTALL_EXTENSION,
-          ImmutableMap.of("path", path, "temporary", false));
+        executeMethod.execute(UNINSTALL_EXTENSION, Map.of("id", extensionId));
       }
     };
   }
