@@ -17,26 +17,20 @@
 
 package org.openqa.selenium;
 
-import com.google.common.net.HostAndPort;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.openqa.selenium.environment.webserver.AppServer;
-import org.openqa.selenium.environment.webserver.NettyAppServer;
-import org.openqa.selenium.remote.http.Contents;
-import org.openqa.selenium.remote.http.HttpHandler;
-import org.openqa.selenium.remote.http.HttpRequest;
-import org.openqa.selenium.remote.http.HttpResponse;
-import org.openqa.selenium.support.ui.WebDriverWait;
-import org.openqa.selenium.testing.SeleniumTestRule;
-import org.openqa.selenium.testing.SeleniumTestRunner;
+import static com.google.common.net.HttpHeaders.REFERER;
+import static java.nio.charset.StandardCharsets.US_ASCII;
+import static java.nio.charset.StandardCharsets.UTF_8;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assumptions.assumeThat;
+import static org.openqa.selenium.build.InProject.locate;
+import static org.openqa.selenium.remote.CapabilityType.PROXY;
+import static org.openqa.selenium.support.ui.ExpectedConditions.presenceOfElementLocated;
+import static org.openqa.selenium.support.ui.ExpectedConditions.titleIs;
+import static org.openqa.selenium.testing.Safely.safelyCall;
 
+import com.google.common.net.HostAndPort;
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URLEncoder;
 import java.nio.file.Files;
@@ -45,46 +39,49 @@ import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.stream.Collectors;
-
-import static com.google.common.net.HttpHeaders.REFERER;
-import static java.nio.charset.StandardCharsets.US_ASCII;
-import static java.nio.charset.StandardCharsets.UTF_8;
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.openqa.selenium.build.InProject.locate;
-import static org.openqa.selenium.remote.CapabilityType.PROXY;
-import static org.openqa.selenium.support.ui.ExpectedConditions.presenceOfElementLocated;
-import static org.openqa.selenium.support.ui.ExpectedConditions.titleIs;
-import static org.openqa.selenium.testing.Safely.safelyCall;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.RegisterExtension;
+import org.openqa.selenium.environment.webserver.AppServer;
+import org.openqa.selenium.environment.webserver.NettyAppServer;
+import org.openqa.selenium.remote.http.Contents;
+import org.openqa.selenium.remote.http.HttpHandler;
+import org.openqa.selenium.remote.http.HttpRequest;
+import org.openqa.selenium.remote.http.HttpResponse;
+import org.openqa.selenium.support.ui.WebDriverWait;
+import org.openqa.selenium.testing.SeleniumExtension;
 
 /**
- * Tests that "Referer" headers are generated as expected under various conditions.
- * Each test will perform the following steps in the browser:
+ * Tests that "Referer" headers are generated as expected under various conditions. Each test will
+ * perform the following steps in the browser:
+ *
  * <ol>
- * <li>navigate to page 1
- * <li>click a link to page 2
- * <li>click another link to page 3
- * <li>click a link to go back to page 2
- * <li>click a link to go forward to page 3
+ *   <li>navigate to page 1
+ *   <li>click a link to page 2
+ *   <li>click another link to page 3
+ *   <li>click a link to go back to page 2
+ *   <li>click a link to go forward to page 3
  * </ol>
  *
- * <p>After performing the steps above, the test will check that the test server(s)
- * recorded the expected HTTP requests. For each step, the tests expect:
+ * <p>After performing the steps above, the test will check that the test server(s) recorded the
+ * expected HTTP requests. For each step, the tests expect:
+ *
  * <ol>
- * <li>a request for page1; no Referer header
- * <li>a request for page2; Referer: $absolute-url-for-page1
- * <li>a request for page3; Referer: $absolute-url-for-page2
- * <li>no request
- * <li>no request
+ *   <li>a request for page1; no Referer header
+ *   <li>a request for page2; Referer: $absolute-url-for-page1
+ *   <li>a request for page3; Referer: $absolute-url-for-page2
+ *   <li>no request
+ *   <li>no request
  * </ol>
  *
- * <p>Note: depending on the condition under test, the various pages may or may
- * not be served by the same server.
+ * <p>Note: depending on the condition under test, the various pages may or may not be served by the
+ * same server.
  */
-@RunWith(SeleniumTestRunner.class)
-public class ReferrerTest {
+class ReferrerTest {
 
-  @Rule
-  public SeleniumTestRule seleniumTestRule = new SeleniumTestRule();
+  @RegisterExtension static SeleniumExtension seleniumExtension = new SeleniumExtension();
 
   private static final String PAGE_1 = "/page1.html";
   private static final String PAGE_2 = "/page2.html";
@@ -96,21 +93,26 @@ public class ReferrerTest {
   private TestServer server2;
   private ProxyServer proxyServer;
 
-  @BeforeClass
+  @BeforeAll
+  public static void shouldTestBeRunAtAll() {
+    assumeThat(Boolean.getBoolean("selenium.skiptest")).isFalse();
+  }
+
+  @BeforeAll
   public static void readContents() throws IOException {
     page1 = new String(Files.readAllBytes(locate("common/src/web/proxy" + PAGE_1)));
     page2 = new String(Files.readAllBytes(locate("common/src/web/proxy" + PAGE_2)));
     page3 = new String(Files.readAllBytes(locate("common/src/web/proxy/page3.html")));
   }
 
-  @Before
+  @BeforeEach
   public void startServers() {
     server1 = new TestServer();
     server2 = new TestServer();
     proxyServer = new ProxyServer();
   }
 
-  @After
+  @AfterEach
   public void stopServers() {
     safelyCall(() -> proxyServer.stop());
     safelyCall(() -> server1.stop());
@@ -123,24 +125,25 @@ public class ReferrerTest {
 
     Capabilities caps = new ImmutableCapabilities(PROXY, proxy);
 
-    return seleniumTestRule.createNewDriver(caps);
+    return seleniumExtension.createNewDriver(caps);
   }
 
   /**
-   * Tests navigation when all of the files are hosted on the same domain and the browser
-   * does not have a proxy configured.
+   * Tests navigation when all of the files are hosted on the same domain and the browser does not
+   * have a proxy configured.
    */
   @Test
-  public void basicHistoryNavigationWithoutAProxy() {
+  void basicHistoryNavigationWithoutAProxy() {
     String page1Url = server1.whereIs(PAGE_1 + "?next=" + encode(server1.whereIs(PAGE_2)));
     String page2Url = server1.whereIs(PAGE_2 + "?next=" + encode(server1.whereIs(PAGE_3)));
 
-    performNavigation(seleniumTestRule.getDriver(), page1Url);
+    performNavigation(seleniumExtension.getDriver(), page1Url);
 
-    assertThat(server1.getRequests()).containsExactly(
-      new ExpectedRequest(PAGE_1, null),
-      new ExpectedRequest(PAGE_2, page1Url),
-      new ExpectedRequest(PAGE_3, page2Url));
+    assertThat(server1.getRequests())
+        .containsExactly(
+            new ExpectedRequest(PAGE_1, null),
+            new ExpectedRequest(PAGE_2, page1Url),
+            new ExpectedRequest(PAGE_3, page2Url));
   }
 
   /**
@@ -148,7 +151,7 @@ public class ReferrerTest {
    * configured to use a proxy that permits direct access to that domain.
    */
   @Test
-  public void basicHistoryNavigationWithADirectProxy() {
+  void basicHistoryNavigationWithADirectProxy() {
     proxyServer.setPacFileContents("function FindProxyForURL(url, host) { return 'DIRECT'; }");
     WebDriver driver = createDriver(proxyServer.whereIs("/pac.js"));
 
@@ -158,22 +161,18 @@ public class ReferrerTest {
     performNavigation(driver, page1Url);
 
     assertThat(server1.getRequests())
-      .containsExactly(
-        new ExpectedRequest(PAGE_1, null),
-        new ExpectedRequest(PAGE_2, page1Url),
-        new ExpectedRequest(PAGE_3, page2Url));
+        .containsExactly(
+            new ExpectedRequest(PAGE_1, null),
+            new ExpectedRequest(PAGE_2, page1Url),
+            new ExpectedRequest(PAGE_3, page2Url));
   }
 
   private static String encode(String url) {
-    try {
-      return URLEncoder.encode(url, UTF_8.name());
-    } catch (UnsupportedEncodingException e) {
-      throw new RuntimeException("UTF-8 should always be supported!", e);
-    }
+    return URLEncoder.encode(url, UTF_8);
   }
 
   private void performNavigation(WebDriver driver, String firstUrl) {
-    WebDriverWait wait = new WebDriverWait(driver,  Duration.ofSeconds(5));
+    WebDriverWait wait = new WebDriverWait(driver, Duration.ofSeconds(5));
 
     driver.get(firstUrl);
     wait.until(titleIs("Page 1"));
@@ -206,10 +205,7 @@ public class ReferrerTest {
 
     @Override
     public String toString() {
-      return "ExpectedRequest{" +
-        "uri='" + uri + '\'' +
-        ", referer='" + referer + '\'' +
-        '}';
+      return "ExpectedRequest{" + "uri='" + uri + '\'' + ", referer='" + referer + '\'' + '}';
     }
 
     @Override
@@ -218,8 +214,7 @@ public class ReferrerTest {
         return false;
       }
       ExpectedRequest that = (ExpectedRequest) o;
-      return this.uri.equals(that.uri) &&
-        Objects.equals(this.referer, that.referer);
+      return this.uri.equals(that.uri) && Objects.equals(this.referer, that.referer);
     }
 
     @Override
@@ -253,8 +248,8 @@ public class ReferrerTest {
       }
 
       return new HttpResponse()
-        .setHeader("Content-Type", "text/html; charset=utf-8")
-        .setContent(Contents.utf8String(responseHtml));
+          .setHeader("Content-Type", "text/html; charset=utf-8")
+          .setContent(Contents.utf8String(responseHtml));
     }
 
     public List<ExpectedRequest> getRequests() {
@@ -295,16 +290,17 @@ public class ReferrerTest {
     private String pacFileContents;
 
     public ProxyServer() {
-      server = new NettyAppServer(
-        req -> {
-          if (pacFileContents != null && req.getUri().endsWith("/pac.js")) {
-            return new HttpResponse()
-              .setHeader("Content-Type", "application/x-javascript-config; charset=us-ascii")
-              .setContent(Contents.bytes(pacFileContents.getBytes(US_ASCII)));
-          }
-          return handler.execute(req);
-        }
-      );
+      server =
+          new NettyAppServer(
+              req -> {
+                if (pacFileContents != null && req.getUri().endsWith("/pac.js")) {
+                  return new HttpResponse()
+                      .setHeader(
+                          "Content-Type", "application/x-javascript-config; charset=us-ascii")
+                      .setContent(Contents.bytes(pacFileContents.getBytes(US_ASCII)));
+                }
+                return handler.execute(req);
+              });
       server.start();
     }
 
